@@ -8,6 +8,7 @@
  - rebuilt update functions (added wggallery_check_db) (goffy)
  - added modal view of single image (goffy)
  - added 10 stars rating (lupin/goffy)
+ - added 10 numeric rating (lupin/goffy)
  
 <h5>1.12 RC1</h5>  [2019/../..]
 <hr>
